tests/snapshots/examples_fixtures/errors__match_guard_non_exhaustive_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/match_guard_non_exhaustive_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

A guarded wildcard `_ if ...` does not guarantee exhaustiveness because the guard may fail.

  --> examples/errors/match_guard_non_exhaustive_error.flx:4:22
  |
4 | let non_exhaustive = match 42 {
  |                      ^^^^^^^^^^
5 |     _ if true -> 1,
  | ^^^^^^^^^^^^^^^^^^^
6 | };
  | ^

Hint:
  Add an unguarded `_ -> ...` fallback arm after guarded arms.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- expected () -> Unit, found () -> Unit with IO


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 4 errors.
== stdout ==
<not executed>
